[package]
name = "sdm72"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/acpiccolo/SDM72-Powermeter"
description = "SDM72 protocol and commandline tool"

[lib]
name = "sdm72_lib"
path = "src/lib.rs"

[[bin]]
name = "sdm72"
path = "src/main.rs"
required-features = ["bin-dependencies"]

[features]
default = ["bin-dependencies"]
bin-dependencies = [
    "safe-client-sync",
    "tokio-rtu-sync",
    "tokio-tcp-sync",
    "serde",
    "clap/derive",
    "dep:anyhow",
    "dep:log",
    "dep:tokio-serial",
    "dep:clap-verbosity-flag",
    "dep:clap-num",
    "dep:flexi_logger",
    "dep:humantime",
    "dep:dialoguer",
    "dep:paho-mqtt",
    "dep:serde_json",
    "dep:serde_yaml",
    "dep:rand",
    "dep:humantime-serde",
]
tokio-rtu-sync = ["tokio-modbus/rtu-sync", "dep:tokio-serial", "dep:paste"]
tokio-rtu = ["tokio/time", "tokio-modbus/rtu", "dep:tokio-serial", "dep:paste"]
tokio-tcp-sync = [
    "tokio/net",
    "tokio-modbus/tcp-sync",
    "dep:tokio-serial",
    "dep:paste",
]
tokio-tcp = [
    "tokio/time",
    "tokio/net",
    "tokio-modbus/tcp",
    "dep:tokio-serial",
    "dep:paste",
]
serde = ["serde/derive"]
safe-client-sync = []
safe-client-async = []

[dependencies]
thiserror = "2"
tokio-modbus = { version = "0.16", default-features = false, optional = true }
tokio-serial = { version = "5", optional = true }
tokio = { version = "1", default-features = false, optional = true }
paste = { version = "1", optional = true }
# Requirements for bin
anyhow = { version = "1", optional = true }
log = { version = "0.4", optional = true }
clap = { version = "4", optional = true }
clap-verbosity-flag = { version = "3", optional = true }
clap-num = { version = "1", optional = true }
flexi_logger = { version = "0.31", optional = true }
humantime = { version = "2", optional = true }
paho-mqtt = { version = "0.13", optional = true }
serde_json = { version = "1", optional = true }
serde = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
rand = { version = "0.9", optional = true }
humantime-serde = { version = "1", optional = true }
dialoguer = { version = "0.12", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
